Refactor test class